<resources>
    <string name="app_name">UserRecord</string>
    <string name="search">Search</string>
    <string name="sort_data">Sort Data</string>
    <string name="delete_all_contacts">Delete All Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_contact_information">Add your contact information</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="are_you_sure_to_delete_all_contacts">Are you sure to delete all contacts</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
</resources>