<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionSearch"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/actionSort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_data"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"/>

    <item
        android:id="@+id/actionDelete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete_all_contacts"
        app:iconTint="@color/white"
        app:showAsAction="ifRoom|collapseActionView"/>


</menu>